# orgschema-framework

./: .cursorrules  .gitignore  .rooignore  CITATION.cff  README.md  pyproject.toml  setup.cfg
.claude-decisions/: .gitignore  README.md  local-patterns.md
.github/workflows/: ci.yml
config_org_framework/: validate.py
config_org_framework/schemas/: compliance.json  product.json
orgschema_framework/: validate.py
orgschema_framework/schemas/: organization.json  process.json  product.json
